--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ img1 {
 .banner-block {
     width: 100%;
     height: 180px;
-    background-image: url(img/banner.jpg);
+    background-image: url(banner.jpg);
 background-size:cover;
    /* background: #cf7021;*/
 
